--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,15 +18,14 @@ environment:
 
 dependencies:  
   oktoast: ^2.3.0
-  shared_preferences: ^0.5.6
   firebase_auth: ^0.15.3+1
   find_dropdown: 
     git: https://github.com/Bwolfs2/find_dropdown.git
-  hasura_connect: ^1.1.0
+  hasura_connect: ^1.1.2
   dio: ^3.0.8
   flutter_mobx: ^0.3.6
   mobx: ^0.4.0+1
-  flutter_modular: ^0.4.2
+  flutter_modular: ^1.1.1
   flutter:
     sdk: flutter
 
@@ -34,6 +33,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
 
 dev_dependencies:
+  effective_dart: ^1.2.1
   mockito: ^4.1.1
   mobx_codegen: ^0.4.0+1
   build_runner: ^1.7.3
