--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,11 @@ dependencies:
   firebase_auth: ^0.16.1
   find_dropdown: ^0.2.0
   git: ^1.0.1
-  hasura_connect: 2.0.0-dev.17.3
+  hasura_connect: 2.0.0-dev.17.5
   dio: ^3.0.10
   flutter_mobx: ^1.1.0+2
   mobx: ^1.2.1+2
-  flutter_modular: ^1.3.2
+  flutter_modular: ^2.0.0+1
   flutter:
     sdk: flutter
 
