--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: loja_hasura
 description: A new Flutter project.
 
+publish_to: none
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
@@ -11,23 +12,23 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
-  sdk: ">=2.3.0 <3.0.0"
+  sdk: ">=2.17.3 <3.0.0"
 
 dependencies:  
-  oktoast: ^2.3.2
-  firebase_auth: ^0.16.1
-  find_dropdown: ^0.2.0
-  git: ^1.0.1
-  hasura_cache_interceptor: 1.0.0-dev.4
-  hive_cache_interceptor: 1.0.0-dev.2
-  hasura_connect: 2.0.0-dev.17.8
-  dio: ^3.0.10
-  flutter_mobx: ^1.1.0+2
-  mobx: ^1.2.1+2
-  flutter_modular: ^2.0.0+1
+  oktoast: ^3.2.0
+  firebase_auth: ^3.4.2
+  find_dropdown: ^1.0.0
+  git: ^2.0.0
+  hasura_cache_interceptor: 
+  hive_cache_interceptor: 
+  hasura_connect: 
+  dio: ^4.0.6
+  flutter_mobx: ^2.0.6+1
+  mobx: ^2.0.7+4
+  flutter_modular: ^5.0.3
   flutter:
     sdk: flutter
 
@@ -35,12 +36,33 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
 
 dev_dependencies:
-  effective_dart: ^1.2.4
-  mockito: ^4.1.1
-  build_runner: ^1.10.0
-  mobx_codegen: ^1.1.0+1
+  effective_dart: ^1.3.2
+  mockito: ^5.2.0
+  build_runner: ^2.2.0
+  mobx_codegen: ^2.0.7
+  modular_test: ^2.0.0
   flutter_test:
     sdk: flutter
+
+dependency_overrides: 
+  hasura_cache_interceptor: 
+    git:
+      url: https://github.com/Flutterando/hasura_connect.git
+      ref: updating-melos
+      path: packages/hasura_cache_interceptor
+
+  hive_cache_interceptor: 
+    git:
+      url: https://github.com/Flutterando/hasura_connect.git
+      ref: updating-melos
+      path: packages/hive_cache_interceptor
+
+  hasura_connect: 
+    git:
+      url: https://github.com/Flutterando/hasura_connect.git
+      ref: updating-melos
+      path: packages/hasura_connect
+  #hasura_connect: ^4.0.0+2
 
 scripts:
   watch: flutter pub run build_runner watch
